# ChessEngineCpp

./: CMakeLists.txt  README.md
.github/workflows/: test.yml
src/: main.cpp
src/core/: Board.cpp  Board.hpp  Common.hpp  Engine.cpp  Game.cpp  Game.hpp
src/ui/: ChessUI.cpp  ChessUI.hpp
test/: boardTest.hpp  chessUITest.hpp  commonTest.hpp  engineTest.hpp  gameTest.hpp  mainTest.cpp  testHelper.hpp  test_main.cpp
